yaml-tests/src/test/resources/check-result-metadata/shouldFail/wrong-array-of-struct-field-name.yamsql
#
# wrong-array-of-struct-field-name.yamsql
#
# This source file is part of the FoundationDB open source project
#
# Copyright 2015-2026 Apple Inc. and the FoundationDB project authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Failure: element struct field is named "WRONG_X" but actual name is "X".
---
schema_template:
    CREATE TYPE AS STRUCT point(x bigint, y bigint)
    CREATE TABLE t1(pk integer, pts point array, primary key(pk))
---
setup:
  steps:
    - query: INSERT INTO t1 VALUES (1, [(10, 20)])
---
test_block:
  tests:
    -
      - query: SELECT pk, pts FROM t1
      - resultMetadata: [{PK: INTEGER}, {PTS: {"!array": [{WRONG_X: BIGINT}, {Y: BIGINT}]}}]
      - result: [{1, [{X: 10, Y: 20}]}]
...
